@@ -173,7 +173,7 @@ gdb_expect {
 	# This is what happens on ARM in thumb mode -fn 2000-02-01
 	pass "step out of main"
     }
-    -re ".*__rt_entry ().*$gdb_prompt $" {
+    -re ".*__rt_entry.* ().*$gdb_prompt $" {
 	# This is what happens on the ARM RVDS runtime
 	pass "step out of main"
     }
